# k8s_registry_auth

./: Dockerfile  README.md  configuration.py  main.py  pyproject.toml
.github/workflows/: image_build.yaml
registry_auth/: configuration.py  docker_client.py  kubernetes_client.py
src/: docker_client.py
